# pyagree

./: .gitignore  .readthedocs.yml  README.md  conda_env.yml  setup.cfg  setup.py
doc/: requirements.txt
doc/source/: API.rst  conf.py  index.rst  measures.rst  refs.bib  using.rst
pyagree/: IA.py  IT.py  __init__.py  common.py  inf_agreement.py  inf_theory.py  standard.py  test.py
