[metadata]
name = pyagree
author = Alberto Casagrande
author-email = acasagrande@units.it
summary = A simple Python module to compute some inter-rater agreement measures
description-file = 
	README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://readthedocs.org/projects/pyagree/
project_urls =
    Documentation = https://readthedocs.org/projects/pyagree/
    Source Code = https://github.com/albertocasagrande/pyagree
requires-python = >=3.6
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Topic :: Scientific/Engineering
	Programming Language :: Python
        Programming Language :: Python :: 3.6
        Operating System :: OS Independent
        License :: OSI Approved :: MIT License

[files]
packages = 
	pyagree

[pyagree]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
api_doc_dir = reference/api

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal = 0
